--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
+    <string name="base_url" translatable="false">https://openapi.twse.com.tw</string>
+
     <string name="app_name">BigTreeHw</string>
 </resources>
