--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="base_url" translatable="false">https://openapi.twse.com.tw</string>
 
     <string name="app_name">BigTreeHw</string>
+    <string name="top_bar_title">大樹證券</string>
+    <string name="stock_sort_with_desc_order"><![CDATA[股票代號大->小]]></string>
+    <string name="stock_sort_with_asc_order"><![CDATA[股票代號小->大]]></string>
 </resources>
