--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="pe_ratio_format">本益比: %s</string>
     <string name="pb_ratio_format">股價淨值比: %s</string>
     <string name="dividend_yield_format">殖利率: %s</string>
+    <string name="no_stock_info">查無此股票資訊</string>
+    <string name="notice">提示</string>
+    <string name="network_error">網路不通，請稍後再試試</string>
 </resources>
